--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -72,15 +72,15 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
-     - name: Import external feeds - passwall
-      working-directory: ./openwrt
+     #- name: Import external feeds - passwall
+     # working-directory: ./openwrt
       run: |
          git clone https://github.com/xiaorouji/openwrt-passwall.git package/openwrt-passwall
     #    git clone "your_github_link" package/"your_folder_name"      
          git clone https://github.com/tty228/luci-app-serverchan.git package/luci-app-serverchan
          git clone https://github.com/project-lede/luci-app-godproxy.git package/luci-app-godproxy
-    - name: Import external feeds - JerryKuKu Argon
-      working-directory: ./openwrt
+   # - name: Import external feeds - JerryKuKu Argon
+     # working-directory: ./openwrt
       run: |
         git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku         
     - name: Configuration Customization - Build_x86_64
