--- a/x86_64.config
+++ b/x86_64.config
@@ -60,7 +60,7 @@ CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-pptp-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-argon-1.7.2=y
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_node=y
