--- a/x86_64.config
+++ b/x86_64.config
@@ -39,6 +39,7 @@ CONFIG_PACKAGE_liblua5.3=y
 # CONFIG_PACKAGE_libmount is not set
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-godproxy=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-netdata=y
@@ -60,7 +61,7 @@ CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-pptp-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon-1.7.2=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_node=y
