--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -87,7 +87,8 @@ jobs:
         git clone https://github.com/xiaorouji/openwrt-passwall.git package/openwrt-passwall
         git clone https://github.com/project-lede/luci-app-godproxy.git package/luci-app-godproxy
         git clone https://github.com/tty228/luci-app-serverchan.git package/luci-app-serverchan
-        git clone https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon
+        git clone https://github.com/jimgo188/op.git package/op
+        git clone https://github.com/jimgo188/files.git files
     - name: Configuration Customization - Build_x86_64
       env:
         CONFIG_FILE: 'x86_64.config'
