--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
-  push:
-    branches: 
-      - master
+  #push:
+    #branches: 
+      #- master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -88,7 +88,7 @@ jobs:
         git clone https://github.com/project-lede/luci-app-godproxy.git package/luci-app-godproxy
         git clone https://github.com/tty228/luci-app-serverchan.git package/luci-app-serverchan
         git clone https://github.com/jimgo188/op.git package/op
-        git clone https://github.com/jimgo188/files.git files
+        git clone -b files https://github.com/jimgo188/op.git files
     - name: Configuration Customization - Build_x86_64
       env:
         CONFIG_FILE: 'x86_64.config'
